# redteam

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  backend.Dockerfile  debug-compose.yml  docker-compose.yml  frontend.Dockerfile
backend/: .dockerignore  Cargo.toml
backend/src/: app_port.rs  db_connect.rs  db_setup.rs  hashcrack_route.rs  jwt_token.rs  login_route.rs  main.rs  password_hashing.rs  pettable_route.rs  user_route.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/model/: hashcrack.rs  login.rs  mod.rs  pettable.rs  token.rs  username.rs
frontend/: Cargo.toml  frontend.conf  index.html
frontend/src/: api.rs  main.rs  route_switch.rs  routes.rs
frontend/src/api/: config.rs
frontend/src/components/: cracking_page.rs  home_page.rs  info_page.rs  loading_spinner.rs  material_icon.rs  mod.rs  not_found_page.rs  page.rs  pettable.rs  pettable_line.rs  text_input.rs
frontend/src/components/auth/: auth_macros.rs  login_form.rs  login_page.rs  logout.rs  mod.rs
frontend/src/stores/: auth_user.rs  mod.rs
frontend/style/: _code.scss  _colors.scss  _general.scss  _header.scss  _index.scss  _loading_spinner.scss  _material_icons.scss  _page_layout.scss  _pets.scss
proxy/: Dockerfile  redteam  self-signed.conf  setup_nginx  setup_ssl  ssl-params.conf
