[package]
name = "redteam-demo-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
dotenvy = "0.15"
log = "0.4"
reqwasm = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
yewdux-functional = "0.1.0"

[build-dependencies]
dotenvy = "0.15"
